--- a/index.html
+++ b/index.html
@@ -3,87 +3,68 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech47000 – Solutions connectées & innovations numériques</title>
 
-    <!-- Script Google AdSense (remplace ca-pub-XXXX par le tien) -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
-            crossorigin="anonymous"></script>
+    <title>Tech47000 - Votre technologie, notre expertise</title>
 
     <style>
         body {
             margin: 0;
-            padding: 0;
+            background: #0d0d0d;
+            color: white;
             font-family: Arial, sans-serif;
-            background:#f4f4f4;
-            color:#333;
-            line-height: 1.6;
         }
+
         header {
-            background: #000;
-            color: #fff;
-            padding: 30px 20px;
+            padding: 30px;
+            text-align: center;
+            font-size: 28px;
+            font-weight: bold;
+            background: linear-gradient(90deg, #00e5ff, #0066ff);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+
+        .hero {
+            padding: 60px 20px;
             text-align: center;
         }
-        main {
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
-            background:#fff;
+
+        .hero h1 {
+            font-size: 40px;
+            margin-bottom: 10px;
+            background: linear-gradient(90deg, #00e5ff, #0066ff);
+            -webkit-background-clip: text;
+            color: transparent;
         }
-        h1, h2 {
-            font-weight: 600;
+
+        .hero p {
+            font-size: 20px;
+            color: #cccccc;
         }
+
         footer {
+            margin-top: 80px;
             text-align: center;
             padding: 20px;
-            margin-top: 40px;
             font-size: 14px;
-            color:#777;
+            color: #666;
         }
     </style>
 </head>
 
 <body>
+
 <header>
-    <h1>Tech47000</h1>
-    <p>Innovations numériques, solutions connectées, expertise tech.</p>
+    TECH47000
 </header>
 
-<main>
-    <h2>Bienvenue sur Tech47000</h2>
-    <p>
-        Tech47000 est une plateforme dédiée aux solutions technologiques 
-        modernes, à l’optimisation numérique et aux équipements connectés.
-        Retrouvez des guides, des configurations et des retours d’expérience 
-        pour accompagner vos projets tech.
-    </p>
-
-    <h2>Nos domaines d’expertise</h2>
-    <ul>
-        <li>Automatisation domestique et équipements intelligents</li>
-        <li>Solutions cloud & hébergement</li>
-        <li>Intégration d’outils connectés</li>
-        <li>Optimisation web & performance</li>
-    </ul>
-
-    <h2>Annonces</h2>
-    <p>Des contenus sponsorisés peuvent apparaître ici.</p>
-
-    <!-- Emplacement pub -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-8524673998493594"
-         data-ad-slot="0000000000"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-
-</main>
+<section class="hero">
+    <h1>Innovation. Fiabilité. Performance.</h1>
+    <p>Solutions technologiques modernes, optimisées pour votre confort et votre réussite.</p>
+</section>
 
 <footer>
-    © Tech47000 – Tous droits réservés
+    © 2025 – Tech47000. Tous droits réservés.
 </footer>
 
 </body>
