--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Tech47000 - Votre technologie, notre expertise</title>
+
+    <!-- Script principal Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+        crossorigin="anonymous"></script>
 
     <style>
         body {
@@ -61,6 +64,17 @@
 <section class="hero">
     <h1>Innovation. Fiabilité. Performance.</h1>
     <p>Solutions technologiques modernes, optimisées pour votre confort et votre réussite.</p>
+
+    <!-- Bloc pub Google AdSense -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-8524673998493594"
+         data-ad-slot="0000000000"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </section>
 
 <footer>
