--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
         crossorigin="anonymous"></script>
 
     <style>
-        body {
+        html, body {
+            height: 100%;
             margin: 0;
+            padding: 0;
+        }
+
+        body {
             background: #0d0d0d;
             color: white;
             font-family: Arial, sans-serif;
@@ -28,7 +33,12 @@
         }
 
         .hero {
-            padding: 60px 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 80vh;
+            padding: 40px 20px;
             text-align: center;
         }
 
@@ -46,7 +56,7 @@
         }
 
         footer {
-            margin-top: 80px;
+            margin-top: 40px;
             text-align: center;
             padding: 20px;
             font-size: 14px;
@@ -83,3 +93,29 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
