--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
             color: #cccccc;
         }
 
+        .ads-footer {
+            text-align: center;
+            margin: 40px 0;
+        }
+
         footer {
-            margin-top: 40px;
             text-align: center;
             padding: 20px;
             font-size: 14px;
@@ -75,11 +79,24 @@
     <h1>Innovation. Fiabilité. Performance.</h1>
     <p>Solutions technologiques modernes, optimisées pour votre confort et votre réussite.</p>
 
-    <!-- Bloc pub Google AdSense -->
+    <!-- Premier bloc pub AdSense -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="0000000000"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</section>
+
+<!-- Deuxième bloc pub AdSense -->
+<section class="ads-footer">
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-8524673998493594"
-         data-ad-slot="0000000000"
+         data-ad-slot="1111111111"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
     <script>
@@ -93,29 +110,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
